Added the basic functionality

--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Add User</title>
 </head>
 <body>
-
+    <h1>Add a user</h1>
+    <form method="POST" action="/add_user">
+        <input type="text" name="user_name" placeholder="New User"/>
+    </form>
 </body>
 </html>
