Implemented all routes with new template

--- a/templates/movies.html
+++ b/templates/movies.html
@@ -1,28 +1,84 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ username }}'s Favourite Movies</title>
-</head>
-<body>
-    <h1>Movies:</h1>
-    <ul>
-        {% for movie in movies %}
-            <li>
-                {{ movie["name"] }}
-                <ul>
-                    <li>
-                        Director: {{ movie["director"] }}
-                    </li>
-                    <li>
-                        Year: {{ movie["year"] }}
-                    </li>
-                    <li>
-                        Rating: {{ movie["rating"] }}
-                    </li>
-                </ul>
-            </li>
-        {% endfor %}
-    </ul>
-</body>
+<!DOCTYPE HTML>
+<!--
+	Phantom by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>{{ username }}'s Favourite Movies</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
+		<noscript><link rel="stylesheet" href="{{ url_for('static', filename='css/noscript.css') }}" /></noscript>
+	</head>
+	<body class="is-preload">
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					<header id="header">
+						<div class="inner">
+
+							<!-- Logo -->
+								<a href="/" class="logo">
+									<span class="symbol"><img src="{{ url_for('static', filename='images/logo.jpg') }}" alt="" /></span>
+									<span class="title">My Movie List</span>
+								</a>
+						</div>
+					</header>
+
+
+				<!-- Main -->
+					<div id="main">
+						<div class="inner">
+							<header>
+								<h1>{{ username }}'s Favourite Movies:</h1>
+							</header>
+							<section class="tiles">
+								{% for movie in movies %}
+								<article class="style6">
+									<span class="image">
+										<img src="{{ movie['poster_url'] }}" alt="" />
+									</span>
+                                    <a href="{{user_id}}/update_movie/{{movie['id']}}">
+                                        <h2>{{ movie['name'] }}</h2>
+                                        <h4>Directed by {{ movie["director"] }}</h4>
+                                        <h4>{{ movie["year"] }}</h4>
+                                        <h4>{{ movie["rating"] }}/10</h4>
+                                    </a>
+
+								</article>
+    							{% endfor %}
+							</section>
+						</div>
+						<br>
+						<div class="inner">
+							<a href="/users/{{user_id}}/add_movie">
+  								<input type="button" value="Add Movie" class="primary" />
+							</a>
+						</div>
+					</div>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<div class="inner">
+							<ul class="copyright">
+								<li>&copy; My Movie List. All rights reserved</li>
+								<li>Template: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>Author: Alexandre Coutinho</li>
+							</ul>
+						</div>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+			<script src="{{ url_for('static', filename='js/browser.min.js') }}"></script>
+			<script src="{{ url_for('static', filename='js/breakpoints.min.js') }}"></script>
+			<script src="{{ url_for('static', filename='js/util.js') }}"></script>
+			<script src="{{ url_for('static', filename='js/main.js') }}"></script>
+
+	</body>
 </html>
