--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Add User</title>
+		<title>My Movie List</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
@@ -28,20 +28,32 @@
 						</div>
 					</header>
 
-
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Add User</h1>
+								<h1>A web app designed to allow users to store a list of their<br /> favourite
+								movies.</h1>
+								<h3>HTML template by <a href="http://html5up.net">HTML5 UP</a></h3>
 							</header>
-							<form method="POST" action="/add_user">
-								<div class="field">
-									<div class="field">
-										<input type="text" name="user_name" placeholder="New User"/>
-									</div>
-								</div>
-							</form>
+							<section class="tiles">
+								<article class="style1">
+									<span class="image">
+										<img src="{{ url_for('static', filename='images/pic01.jpg') }}" alt="" />
+									</span>
+									<a href="/users">
+										<h2>List Users</h2>
+									</a>
+								</article>
+								<article class="style2">
+									<span class="image">
+										<img src="{{ url_for('static', filename='images/pic02.jpg') }}" alt="" />
+									</span>
+									<a href="/add_user">
+										<h2>Add User</h2>
+									</a>
+								</article>
+							</section>
 						</div>
 					</div>
 
