--- a/templates/users.html
+++ b/templates/users.html
@@ -1,19 +1,74 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Users - MovieWeb App</title>
-</head>
-<body>
-<h1>
-    Users
-</h1>
-<ul>
-    {% for user in users %}
-        <li>
-            <a href="/users/{{ user['id'] }}">{{ user['name'] }}</a>
-        </li>
-    {% endfor %}
-</ul>
-</body>
+<!DOCTYPE HTML>
+<!--
+	Phantom by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Users</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
+		<noscript><link rel="stylesheet" href="{{ url_for('static', filename='css/noscript.css') }}" /></noscript>
+	</head>
+	<body class="is-preload">
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					<header id="header">
+						<div class="inner">
+
+							<!-- Logo -->
+								<a href="/" class="logo">
+									<span class="symbol"><img src="{{ url_for('static', filename='images/logo.jpg') }}" alt="" /></span>
+									<span class="title">My Movie List</span>
+								</a>
+						</div>
+					</header>
+
+
+				<!-- Main -->
+					<div id="main">
+						<div class="inner">
+							<header>
+								<h1>Users</h1>
+							</header>
+							<section class="tiles">
+								{% for user in users %}
+								<article class="style3">
+									<span class="image">
+										<img src="{{ url_for('static', filename='images/pic03.jpg') }}" alt="" />
+									</span>
+									<a href="/users/{{ user['id'] }}">
+										<h2>{{ user['name'] }}</h2>
+									</a>
+								</article>
+    							{% endfor %}
+							</section>
+						</div>
+					</div>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<div class="inner">
+							<ul class="copyright">
+								<li>&copy; My Movie List. All rights reserved</li>
+								<li>Template: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>Author: Alexandre Coutinho</li>
+							</ul>
+						</div>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+			<script src="{{ url_for('static', filename='js/browser.min.js') }}"></script>
+			<script src="{{ url_for('static', filename='js/breakpoints.min.js') }}"></script>
+			<script src="{{ url_for('static', filename='js/util.js') }}"></script>
+			<script src="{{ url_for('static', filename='js/main.js') }}"></script>
+
+	</body>
 </html>
